--- a/projet.Rmd
+++ b/projet.Rmd
@@ -15,8 +15,8 @@ Deuxieme phase : se pèse une seule fois par jour durant le regime pendant deux 
 # 1. importation des données
 
 ```{r, results='hide'}
-library(readr)
-data <- read_csv("poids.csv")
+library(readxl)
+data <- read_excel("poids.xlsx")
 ```
 
 
@@ -24,8 +24,6 @@ data <- read_csv("poids.csv")
 head(data)
 ```
 
-
-## pretraitement :
 
 ```{r}
 data <- as.data.frame(data)
@@ -40,26 +38,113 @@ head(data)
 ```
 
 
+## 1.1 pretraitement de la variable Poids:
+
 ```{r}
-plot(x=data$Jour, y=data$Poids)
+View(data)
+```
+
+
+### choix de la méthode d'imputation :
+
+  on remarque que les données observées ne varient pas beaucoup (entre 99 et 100 kg environ), ce qui est normal car une personne qui n'est pas malade ne perd pas plusieurs kg en une journée.
+  Du coup, l'imputation devient facile car on pourrait imputer par la médiane selon le jour, c'est-à-dire, la valeur manquante d'un jour sera remplacée par le poids médian du même jour.
+
+
+
+```{r}
+# Imputation des valeurs manquantes par la médiane journalière
+library(dplyr)
+data <- data %>%
+  group_by(Jour) %>%
+  mutate(Poids = ifelse(is.na(Poids), median(Poids, na.rm = TRUE), Poids))
+
 ```
 
 
 
-## separer le dataset
-
-Créer un dataset pour la premiere phase et un second pour la 2e phase.
-
-
-# 2. Lissage par la méthode de regression locale
+```{r}
+any(is.na(data$Poids)) # Vérifie si des valeurs manquantes existent dans Poids
+```
 
 ```{r}
-# juste prendre le code dans le tutoriel, après s'être entendu sur le choix de la variable à confronter avec le poids : soit le jour ou l'heure ?
+is.numeric(data$Poids)
+```
+
+
+## 1.2 pretraitement de la variable Heure:
+
+```{r}
+is.numeric(data$Heure) # ce ne sont pas des données numériques
+any(is.na(data$Heure)) # il y a des na
+```
+
+
+```{r}
+library(hms)
+data$Heure <- as_hms(strptime(gsub("h", ":", data$Heure), format = "%H:%M"))
+
+```
+
+
+```{r}
+mode(data$Heure)
+```
+
+```{r}
+# convertissons les heures en format décimal
+data$Heure <- ifelse(is.na(data$Heure), NA, as.numeric(format(strptime(data$Heure, "%H:%M"), "%H")) +
+                           as.numeric(format(strptime(data$Heure, "%H:%M"), "%M")) / 60)
+
 ```
 
 
 
+```{r}
+# imputons les heures manquantes
+# l'idée ici est de trouver le mean des heures les plus proches : c'est la métode d'interpolation
+# Installer le package "zoo" si nécessaire
+library(zoo)
 
+# Fonction pour interpoler les NA par la moyenne des voisins
+data$Heure <- zoo::na.approx(data$Heure, na.rm = FALSE)
+
+```
+
+
+
+## 1.3 plotting des variables de l'étude :
+
+```{r}
+plot(x=data$Heure, y=data$Poids)
+```
+
+
+Avec un tel nuage de point, je pense qu'on doit transformer les données, en appliquant une fonction
+
+
+# 2. Lissage par la méthode de regression locale : le poids en fonction de la variable heure
+
+```{r}
+res_loess <- loess(Poids~Heure,data=data,span = 0.7)
+```
+
+
+```{r}
+## ajoutons une colonne des valeurs ajustées dans le dataframe
+data$y <- res_loess$fitted
+```
+
+
+
+```{r}
+## representation graphique
+library(ggplot2)
+ggplot(data,aes(x=Heure,y=Poids)) +
+geom_point() +
+geom_line(aes(y=y),col="red",size=1)
+
+```
 
 
 
